tests/NormalTests/paczka1/small_fuzzy/96216164.err
Error in line 6: QJsmJ9Y5oWw A315 99,00
Error in line 8: S571 A315 32,2
Error in line 1: QJsmJ9Y5oWw S372 30,7
